chore(auth): update introspection request and response
Remove unused resource_server and proof from request.
Return either active false or true with all other fields.
